--- a/dexios-core/Cargo.toml
+++ b/dexios-core/Cargo.toml
@@ -35,11 +35,15 @@ aead = { version = "0.5.1", features = ["stream"] }
 zeroize = "1.5.0"
 
 # for password hashing
-argon2 = "0.4.1"
-balloon-hash = "0.3.0"
+argon2 = "0.5.0"
+balloon-hash = "0.4.0"
 blake3 = { version = "1.3.3", features = ["traits-preview"] }
 
 # for generating random bytes
 rand = "0.8.5"
 
-indicatif = { version = "0.16.2", optional = true }
+indicatif = { version = "0.17.3", optional = true }
+
+[dependencies.rand_chacha]
+version = "0.3.1"
+features = ["serde1"]
